# FOR_READING

./: CMakeLists.txt  comments.cpp  config.toml  main.cpp  old_code.md  代码报告_金湘雯.md  老代码阅读.md
Learning Of Threads Controll/: report.md
Old_Code/: CMakeLists.txt  config.toml  report.md
Old_Code/source/: capture.hpp
Old_Code/tools/Camera/log/: error_20190719-210402.2713  error_20190719-210405.2737  error_20190719-210406.2749  error_20190719-210409.2774  error_20190719-210411.2811
Other_School/2018_东南/Main/: test_infantry.cpp
Other_School/2018_大交/InfantryVisionFinal/: main.cpp
Other_School/2018_大交/InfantryVisionFinal/ExtraFiles/: dir
Other_School/2018_大交/InfantryVisionFinal/src/ArmorFind/: armorpredict.cpp
Other_School/2019_太原理工_TRoMaC_CV_HeroAutoAim/predictor/: Predictor.cpp
Report/Report On Thread Pool/: report.md
include/: imageshow.hpp  semaphore.hpp
refactor/: ThreadControl.hpp  main.cpp
source/: README.md  ThreadPool.h  attack.hpp  base.hpp  communicator.hpp
source/windmill/: Windmill.hpp
tools/Camera/log/: error_20190719-210401.2701  error_20190719-210404.2725  error_20190719-210408.2762  error_20190719-210412.2823  error_20190719-210413.2835  error_20190719-210415.2847  error_20190719-210416.2861
